# RORPO

./: .gitignore  .gitmodules  CMakeLists.txt  Computation_Time.txt  Get_RPO_Orientations.hpp  Image.hpp  LICENSE  PO.hpp  README.md  RORPO.hpp  RORPO_multiscale.hpp  ReadMe.txt  diff_buffer.hpp  docopt.cpp  geodilat_modif.hpp  index.html  max_modif.hpp  min_modif.hpp  params.json  sorting.hpp
Image/: CMakeLists.txt  CMakeLists.txt~  Nifti  include
Image/Nifti/: CMakeLists.txt
Image/Nifti/src/: nifti1_io.c  znzlib.c
Image/include/Image/: Image.hpp  Image_IO_ITK.hpp  Image_IO_VTK.hpp  Image_IO_nifti.hpp
Nifti/: CMakeLists.txt  CMakeLists.txt~
Pink/: mccodimage.h  mclifo.c
RORPO_multiscale_Usage/: CMakeLists.txt  RORPO_multiscale_usage.cxx  RORPO_multiscale_usage.xml  ReadMe.md  ReadMe.txt  main.cpp
docopt/: CMakeLists.txt
docs/: requirements.txt
docs/source/: conf.py  documentation.rst  installation.rst
libRORPO/: Algo.hpp  CMakeLists.txt  Geodilation.hpp  Image.hpp  PO.hpp  RPO.hpp  sorting.hpp
libRORPO/Pink/: larith.c  larith.c~  lgeodesic.c  mccodimage.c  mcfifo.c  mcfifo.h  mcimage.c  mcindic.c  mcindic.h  mclifo.h
libRORPO/include/RORPO/: Algo.hpp  Geodilation.hpp  PO.hpp  RORPO.hpp  RORPO_multiscale.hpp  RPO.hpp  sorting.hpp
libRORPO/src/: larith.c  mccodimage.c  mcfifo.c  mcimage.c  mcindic.c  mclifo.c
pyRORPO/: CMakeLists.txt  README.md  bind_PO.hpp  bind_RORPO.hpp  bind_RORPO_multiscale.hpp  bind_RPO.hpp  bindingUtils.hpp  pyRORPO.cpp  pyRORPO.hpp
pyRORPO/docs/source/: conf.py
